# greater_tables_project

./: .gitignore  .readthedocs.yaml  Cargo.toml  MANIFEST.in  README-remember.md  README.md  README.qmd  README.rst  doc-build-test.bat  doc-test.bat  docs-serve.bat  greater_tables.py  gt-testers.ipynb  inject_version.py  prefobnicate.tex  pyproject.toml  scratch.ipynb  uv
docs/: books.bib  conf.py  greater_tables.data.rst  greater_tables.rst  homepage.rst  index.rst  library.bib  modules.rst  start-server.bat  versions.rst
greater_tables/: TODO.md  __init__.py  _version.py  cli.py  config.py  core.py  core_old.py  etcher.py  fabrications.py  greater_tables.py  gtconfig.py  gtcore.py  gtcore2.py  gtenums.py  gtetcher.py  gtfabrications.py  gtformats.py  gtlogging.py  gtutilities.py  hasher.py  test_tables.py  testdf.py  tester.py  tex_list.csv  tex_svg.py  utilities.py  words-12.md
greater_tables/data/: blog.csv  book.csv  notes.csv  tex_list.csv  tex_list.py
src/: lib.rs
tests/: pmir-header.html  single-table.html  styles.css  tables.html  tables.ipynb  tables.qmd  tables.tex  utilities.py
