[build-system]
requires = ["setuptools", "wheel"]  # Tools needed to build the package
build-backend = "setuptools.build_meta"

[project]
name = "greater_tables"
description = "Perfect tables from pandas"
authors = [{name = "Stephen J Mildehall", email = "mynl@me.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pandas", "bs4"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.dynamic]
version  = { attr = "greater_tables.__version__" }