[build-system]
requires = ["maturin>=1.4", "tomlkit"]
build-backend = "maturin"

[project]
name = "greater_tables"
version = "5.1.0"
description = "Perfect tables from pandas dataframes."
authors = [{name = "Stephen J Mildehall", email = "mynl@me.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "bs4",
    "cachetools",
    "pydantic",
    "click",
    "pandas",
    "rich",
    "IPython",
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business"
]

[project.urls]
"Source Code" = "https://github.com/mynl/greater_tables_project"
"Documentation" = "https://greater-tables-project.readthedocs.io/en/latest/"
"Changelog" = "https://greater-tables-project.readthedocs.io/en/latest/versions.html"

[tool.maturin]
module-name = "greater_tables.gtfont"
python-source = "."
cargo-manifest = "gtfont/Cargo.toml"

[project.optional-dependencies]
dev = [
    "setuptools_scm[toml]>=7.0",
    "tomlkit",
    "docutils<0.17",
    "jupyter-sphinx",
    "myst_parser",
    "nbsphinx",
    "pickleshare",
    "recommonmark>=0.7.1",
    "setuptools>=62.3.2",
    "myst_parser",
    "sphinx>=5.0",
    "sphinx-panels",
    "sphinx-rtd-dark-mode",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-toggleprompt",
    "sphinx-multitoc-numbering"
]

[project.scripts]
gt = "greater_tables.cli:cli"

