[build-system]
requires = ["setuptools>=62.3", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greater_tables"
dynamic = ["version"]
description = "Perfect tables from pandas dataframes."
authors = [{name = "Stephen J Mildehall", email = "mynl@me.com" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "bs4",
    "cachetools",
    "pydantic",
    "click",
    "pandas",
    "rich",
    "IPython",
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business"
]

[project.urls]
"Source Code" = "https://github.com/mynl/greater_tables_project"
"Documentation" = "https://greater-tables-project.readthedocs.io/en/latest/"
"Changelog" = "https://greater-tables-project.readthedocs.io/en/latest/versions.html"

[tool.setuptools_scm]
version_file = "greater_tables/_version.py"
local_scheme = "dirty-tag"                          # affects the "+gHASH" part
version_scheme = "post-release"                     # affects dev version style

[tool.setuptools.packages.find]
include = ["greater_tables", "greater_tables.*"]

[tool.setuptools.package-data]
"greater_tables" = ["data/*.csv", "data/*.md"]

[project.optional-dependencies]
dev = [
    "setuptools_scm[toml]>=7.0",
    "tomlkit",
    "docutils<0.17",
    "jupyter-sphinx",
    "myst_parser",
    "nbsphinx",
    "pickleshare",
    "recommonmark>=0.7.1",
    "setuptools>=62.3.2",
    "myst_parser",
    "sphinx>=5.0",
    "sphinx-panels",
    "sphinx-rtd-dark-mode",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-toggleprompt",
    "sphinx-multitoc-numbering"
]

[project.scripts]
gt = "greater_tables.cli:cli"

